feat: introduce project-based workspaces
